--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   springbootjdbc:
-    image: springbootjbdc
+    image: saiprasadam/springbootjbdc
     ports:
       - "8080:8080"
     networks:
